--- a/app/globals.css
+++ b/app/globals.css
@@ -17,17 +17,51 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+#skills h3 {
+  @apply font-semibold;
+}
+
+#skills ul {
+  @apply mb-5 mr-5 min-w-80 max-w-lg;
+}
+
+#skills ul li {
+  @apply my-1 mr-1 inline-block whitespace-nowrap bg-blue-200 px-1.5 py-1 text-sm leading-4 text-gray-900;
+}
+
+.print-button {
+  display: block;
+}
+
+.print-page-break {
+  break-after: page;
+}
+
+@media print {
+  @page {
+    size: a4 portrait;
+  }
+
+  @page :left {
+    margin-top: 0.5in;
+  }
+
+  .print-button {
+    display: none;
   }
 }
