--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  background-image: linear-gradient(90deg, #80808012 1px, #0000 0), linear-gradient(180deg, #80808012 1px, #0000 0);
+}
+
+main {
+  background-image: linear-gradient(90deg, #80808012 1px, #0000 0), linear-gradient(180deg, #80808012 1px, #0000 0);
 }
 
 @layer utilities {
@@ -68,4 +73,13 @@ body {
   .print-button {
     display: none;
   }
+}
+
+.gridLine {
+  position: relative;
+  height: auto;
+  width: 100%;
+  background-image: radial-gradient(circle, rgb(203 213 225) 2px, #fdf0d5 2px);
+  background-size: 2.5rem 2.5rem;
+  background-position: center center;
 }
