--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,14 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+/* img {
+  image-rendering: auto;
+  filter: blur(0);
+  -webkit-filter: blur(0);
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+} */
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -24,19 +32,11 @@ body {
   background-color: '#FDF0D5';
   margin: 0px;
   padding: 0px;
-  /* color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-  background-image: linear-gradient(90deg, #80808012 1px, #0000 0), linear-gradient(180deg, #80808012 1px, #0000 0);
 }
 
-main {
+/* main {
   background-image: linear-gradient(90deg, #80808012 1px, #0000 0), linear-gradient(180deg, #80808012 1px, #0000 0);
-}
+} */
 
 @layer utilities {
   .text-balance {
